--- a/package.json
+++ b/package.json
@@ -6,6 +6,10 @@
   "scripts": {
     "test": "jest --watch"
   },
+  "_moduleAliases": {
+    "@utils": "src/utils",
+    "@typings": "src/typings"
+  },
   "repository": {
     "type": "git",
     "url": "git+https://github.com/silviuaavram/leetcode-questions.git"
@@ -29,6 +33,7 @@
     "@types/jest": "^29.1.1",
     "babel-jest": "^29.1.2",
     "jest": "^29.1.2",
+    "module-alias": "^2.2.3",
     "ts-node": "^10.9.1"
   },
   "dependencies": {
